[workspace]
members = [
    "unplug",
    "unplug-cli",
    "unplug-data",
    "unplug-datagen",
    "unplug-proc",
    "unplug-test",
]
default-members = [
    "unplug",
    "unplug-cli",
    "unplug-data",
    "unplug-test",
]

[profile.bench]
debug = true

[profile.release]
codegen-units = 1
lto = "thin"
panic = "abort"

[patch.crates-io]
toml = { git = "https://github.com/adierking/toml-rs" }
