[workspace]
members = [
    "unplug",
    "unplug-asm",
    "unplug-cli",
    "unplug-data",
    "unplug-datagen",
    "unplug-proc",
    "unplug-test",
]
default-members = [
    "unplug",
    "unplug-asm",
    "unplug-cli",
    "unplug-data",
    "unplug-test",
]

[workspace.package]
authors = ["Derpky <a@dierking.me>"]
edition = "2021"
rust-version = "1.65"
version = "0.4.0"

[workspace.dependencies]
anyhow = "1.0"
arrayvec = "0.7"
bitflags = "1.3.2"
byte-slice-cast = "1.2.2"
byteorder = "1"
cfg-if = "1.0"
clap = { version = "4.2.7", features = ["derive", "unicode", "wrap_help"] }
claxon = "0.4.3"
codespan-reporting = "0.11.1"
console = { version = "0.15.0", default-features = false }
cpal = "0.14.1"
criterion = { version = "0.4.0", features = ["html_reports"] }
crossterm = "0.25.0"
ctor = "0.1.26"
dirs = "4.0"
encoding_rs = "0.8.31"
env_logger = "0.9.3"
float-cmp = { version = "0.9.0", default_features = false, features = ["std"] }
humansize = { version = "2.1.0", features = ["impl_style"] }
indicatif = "0.16.2"
lazy_static = "1.4.0"
lewton = "0.10.2"
libsamplerate-sys = "0.1.10"
log = { version = "0.4" }
logos = "0.12.1"
minimp3 = "0.5"
num_enum = "0.5.7"
num-traits = "0.2"
phf = { version = "0.11.1", features = ["macros", "unicase"] }
proc-macro2 = "1.0"
quick-xml = "0.26.0"
quote = "1.0"
regex = "1"
seahash = "4.1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serial_test = { version = "0.9.0", default_features = false }
simplelog = "0.12.0"
slotmap = "1.0"
smallvec = { version = "1.10.0", features = ["union"] }
smol_str = "0.1.23"
syn = "1.0"
tempfile = "3"
thiserror = "1.0"
time = { version = "0.3", features = ["formatting", "macros"] }
toml_edit = { version = "0.15.0", features = ["easy"] }
tracing = { version = "0.1.37", features = ["log"] }
tracing-appender = "0.2"
tracing-flame = "0.2"
tracing-subscriber = "0.3.16"
unicase = "2.6"

[profile.bench]
debug = true

[profile.release]
codegen-units = 1
lto = "thin"
panic = "abort"
