[workspace]
resolver = "2"
members = [
    "unplug",
    "unplug-asm",
    "unplug-cli",
    "unplug-data",
    "unplug-datagen",
    "unplug-proc",
    "unplug-test",
]
default-members = [
    "unplug",
    "unplug-asm",
    "unplug-cli",
    "unplug-data",
    "unplug-test",
]

[workspace.package]
authors = ["Derpky <a@dierking.me>"]
edition = "2021"
rust-version = "1.74"
version = "0.5.0"

[workspace.dependencies]
anyhow = "1.0"
arrayvec = "0.7"
bitflags = "1.3.2"
bumpalo = { version = "3.18.1", features = ["boxed", "collections"] }
byte-slice-cast = "1.2.2"
byteorder = "1"
cfg-if = "1.0"
clap = { version = "4.2.7", features = ["derive", "unicode", "wrap_help"] }
claxon = "0.4.3"
codespan-reporting = "0.11.1"
console = { version = "0.15.0", default-features = false }
cpal = "0.15.2"
criterion = { version = "0.5.1", features = ["html_reports"] }
crossterm = "0.25.0"
ctor = "0.1.26"
dirs = "4.0"
encoding_rs = "0.8.31"
env_logger = "0.10.0"
float-cmp = { version = "0.9.0", default-features = false, features = ["std"] }
humansize = { version = "2.1.0", features = ["impl_style"] }
indicatif = "0.16.2"
lazy_static = "1.4.0"
lewton = "0.10.2"
libsamplerate-sys = "0.1.10"
log = { version = "0.4" }
logos = "0.12.1"
minimp3_fixed = "0.5.4"
num_enum = "0.5.7"
num-traits = "0.2"
phf = { version = "0.11.1", features = ["macros", "unicase"] }
proc-macro2 = "1.0"
quick-xml = "0.26.0"
quote = "1.0"
regex = "1"
seahash = "4.1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serial_test = { version = "0.9.0", default-features = false }
simplelog = "0.12.0"
slotmap = "1.0"
smallvec = { version = "1.10.0", features = ["union"] }
smol_str = "0.1.23"
syn = "1.0"
tempfile = "3"
thiserror = "1.0"
time = { version = "0.3.36", features = ["formatting", "macros"] }
toml_edit = { version = "0.15.0", features = ["easy"] }
tracing = { version = "0.1.37", features = ["log"] }
tracing-appender = "0.2"
tracing-flame = "0.2"
tracing-subscriber = "0.3.16"
unicase = "2.6"

[patch.crates-io]
libsamplerate-sys = { git = "https://github.com/adierking/libsamplerate-sys.git" }

[workspace.lints.rust]
absolute_paths_not_starting_with_crate = "warn"
elided_lifetimes_in_paths = "warn"
explicit_outlives_requirements = "warn"
meta_variable_misuse = "warn"
non_ascii_idents = "deny"
trivial_casts = "warn"
trivial_numeric_casts = "warn"
unconditional_recursion = "warn"
unreachable_patterns = "warn"
unused_import_braces = "warn"
unused_lifetimes = "warn"
unused_must_use = "warn"
unused_qualifications = "warn"
variant_size_differences = "warn"

[workspace.lints.clippy]
assigning_clones = "allow"
bool_to_int_with_if = "warn"
clear_with_drain = "warn"
clone_on_ref_ptr = "warn"
debug_assert_with_mut_call = "warn"
deref_by_slicing = "warn"
equatable_if_let = "warn"
fallible_impl_from = "warn"
filetype_is_file = "warn"
filter_map_next = "warn"
flat_map_option = "warn"
float_cmp = "warn"
float_cmp_const = "warn"
format_push_string = "warn"
get_unwrap = "warn"
ignored_unit_patterns = "warn"
implicit_clone = "warn"
inconsistent_struct_constructor = "warn"
index_refutable_slice = "warn"
large_types_passed_by_value = "warn"
manual_assert = "warn"
missing_fields_in_debug = "warn"
needless_pass_by_value = "warn"
or_fun_call = "warn"
partial_pub_fields = "warn"
rc_buffer = "warn"
redundant_clone = "warn"
redundant_pub_crate = "warn"
redundant_type_annotations = "warn"
ref_patterns = "warn"
return_self_not_must_use = "warn"
semicolon_if_nothing_returned = "warn"
semicolon_outside_block = "warn"
str_to_string = "warn"
string_to_string = "warn"
suboptimal_flops = "warn"
suspicious_operation_groupings = "warn"
undocumented_unsafe_blocks = "warn"
unused_self = "warn"
used_underscore_binding = "warn"
useless_let_if_seq = "warn"
verbose_file_reads = "warn"
wildcard_dependencies = "warn"

[profile.bench]
debug = true
debug-assertions = false

[profile.release]
codegen-units = 1
lto = "thin"
panic = "abort"
strip = true
