[package]
name = "unplug-asm"
version = "0.0.0"
authors.workspace = true
edition.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
bitflags.workspace = true
logos.workspace = true
num_enum.workspace = true
num-traits.workspace = true
phf.workspace = true
slotmap.workspace = true
smallvec.workspace = true
smol_str.workspace = true
thiserror.workspace = true
tracing.workspace = true
unplug = { path = "../unplug" }

[dev-dependencies]
anyhow.workspace = true
unplug-test = { path = "../unplug-test" }