[package]
name = "unplug-cli"
version = "0.4.0"
authors = ["Derpky"]
edition = "2021"
default-run = "unplug"

[[bin]]
name = "unplug"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
arrayvec = "0.7"
byteorder = "1"
cfg-if = "1.0"
chumsky = "0.8.0"
clap = { version = "3.2.5", features = ["derive", "unicode"] }
console = { version = "0.15.0", default-features = false }
cpal = "0.13.4"
crossterm = "0.23.2"
dirs = "4.0"
humansize = "1.1.1"
indicatif = "0.16.2"
lazy_static = "1.4.0"
log = { version = "0.4" }
logos = "0.12.1"
phf = { version = "0.10", features = ["macros"] }
quick-xml = "0.23"
regex = "1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
simplelog = "^0.12.0"
slotmap = "1.0"
smol_str = "0.1.23"
tempfile = "3"
time = { version = "0.3", features = ["formatting", "macros"] }
toml = "0.5"
tracing = { version = "0.1.35", features = ["log-always"], optional = true }
tracing-appender = { version = "0.2", optional = true }
tracing-flame = { version = "0.2", optional = true }
tracing-subscriber = { version = "0.3.11", optional = true }
unicase = "2.6"
unplug = { path = "../unplug" }

[dev-dependencies]
unplug-test = { path = "../unplug-test" }

[features]
default = ["debug", "trace"]
debug = []
distribution = ["log/release_max_level_debug", "tracing/release_max_level_debug"]
trace = ["tracing", "tracing-appender", "tracing-flame", "tracing-subscriber"]
