[package]
name = "unplug-cli"
default-run = "unplug"
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
version.workspace = true

[[bin]]
name = "unplug"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
arrayvec.workspace = true
byteorder.workspace = true
cfg-if.workspace = true
clap.workspace = true
console.workspace = true
cpal.workspace = true
crossterm.workspace = true
dirs.workspace = true
humansize.workspace = true
indicatif.workspace = true
lazy_static.workspace = true
log.workspace = true
quick-xml.workspace = true
regex.workspace = true
serde.workspace = true
serde_json.workspace = true
simplelog.workspace = true
tempfile.workspace = true
time.workspace = true
toml.workspace = true
tracing = { workspace = true, features = ["log-always"], optional = true }
tracing-appender = { workspace = true, optional = true }
tracing-flame = { workspace = true, optional = true }
tracing-subscriber = { workspace = true, optional = true }
unicase.workspace = true
unplug = { path = "../unplug" }
unplug-asm = { path = "../unplug-asm" }

[dev-dependencies]
unplug-test = { path = "../unplug-test" }

[features]
default = ["debug", "trace"]
debug = []
distribution = ["log/release_max_level_debug", "tracing/release_max_level_debug"]
trace = ["tracing", "tracing-appender", "tracing-flame", "tracing-subscriber"]
