[package]
name = "unplug-data"
version = "0.0.0"
authors.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
bitflags.workspace = true
num_enum.workspace = true
num-traits.workspace = true
phf.workspace = true
phf_macros.workspace = true
thiserror.workspace = true
unicase.workspace = true