[package]
name = "unplug-datagen"
version = "0.0.0"
authors.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
bitflags.workspace = true
byteorder.workspace = true
lazy_static.workspace = true
log = { workspace = true, features = ["release_max_level_debug"] }
num_enum.workspace = true
regex.workspace = true
simplelog.workspace = true
time.workspace = true
unplug = { path = "../unplug" }
