[package]
name = "unplug-test"
version = "0.0.0"
authors = ["Derpky"]
edition = "2018"

[dependencies]
anyhow = "1.0"
log = { version = "0.4" }
simplelog = "0.10"
tempfile = "3"
unplug = { path = "../unplug" }

[dev-dependencies]
seahash = "4.1.0"
criterion = { version = "0.3", features = ["html_reports"] }
lazy_static = "1.4.0"
serial_test = "*"

[[bench]]
name = "decode_music"
harness = false
