[package]
name = "unplug-test"
version = "0.0.0"
authors.workspace = true
edition.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
log.workspace = true
simplelog.workspace = true
tempfile.workspace = true
time.workspace = true
unplug = { path = "../unplug" }

[dev-dependencies]
criterion.workspace = true
lazy_static.workspace = true
seahash.workspace = true
serial_test.workspace = true

[[bench]]
name = "decode_adpcm"
harness = false
[[bench]]
name = "encode_adpcm"
harness = false
[[bench]]
name = "read_stage"
harness = false
