[package]
name = "unplug"
version = "0.3.0"
authors = ["Derpky"]
edition = "2018"

[dependencies]
arrayvec = "0.5"
bitflags = "1.2.1"
byte-slice-cast = "1.1.0"
byteorder = "1"
claxon = "0.4.3"
encoding_rs = "0.8.26"
float-cmp = { version = "0.9.0", default_features = false, features = ["std"] }
lewton = "0.10.2"
log = { version = "0.4", features = ["release_max_level_debug"] }
minimp3 = "0.5"
num_enum = "0.5.1"
slotmap = "0.4"
thiserror = "1.0"
unplug-data = { path = "../unplug-data" }
unplug-proc = { path = "../unplug-proc" }

[dev-dependencies]
ctor = "0.1.21"
env_logger = "0.9"
lazy_static = "1.4.0"