[package]
name = "unplug"
version = "0.4.0"
authors = ["Derpky"]
edition = "2021"

[dependencies]
arrayvec = "0.5"
bitflags = "1.2.1"
byte-slice-cast = "1.1.0"
byteorder = "1"
claxon = "0.4.3"
encoding_rs = "0.8.26"
float-cmp = { version = "0.9.0", default_features = false, features = ["std"] }
lewton = "0.10.2"
libsamplerate-sys = "0.1.10"
minimp3 = "0.5"
num_enum = "0.5.1"
regex = "1"
slotmap = "0.4"
thiserror = "1.0"
tracing = { version = "0.1.29", features = ["log"] }
unplug-data = { path = "../unplug-data" }
unplug-proc = { path = "../unplug-proc" }

[dev-dependencies]
ctor = "0.1.21"
env_logger = "0.9"
lazy_static = "1.4.0"
