[package]
name = "unplug"
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
version.workspace = true

[lints]
workspace = true

[dependencies]
arrayvec.workspace = true
bitflags.workspace = true
byte-slice-cast.workspace = true
byteorder.workspace = true
claxon.workspace = true
encoding_rs.workspace = true
float-cmp.workspace = true
lewton.workspace = true
libsamplerate-sys.workspace = true
minimp3_fixed.workspace = true
num_enum.workspace = true
regex.workspace = true
slotmap.workspace = true
thiserror.workspace = true
tracing.workspace = true
unplug-data = { path = "../unplug-data" }
unplug-proc = { path = "../unplug-proc" }

[dev-dependencies]
ctor.workspace = true
env_logger.workspace = true
lazy_static.workspace = true
